# claude-code-comfyui-nodes

./: .gitignore  CLAUDE.md  README.md  __init__.py  prompts.txt  pyproject.toml  requirements.txt  zapier-n8n-make-knowldge.md
.claude/commands/: learn-comfyui-agentic-nodes.md
.claude/commands/learn/: comfyui-and-agentic-workflow-tools.md  comfyui-node-dev-and-claude-code-sdk.md
.github/: ISSUE_TEMPLATE.md
commands/: reddit-to-video-script.md  reddit-video-script-simple.md
docs/custom-node-dev-docs/: 02-node-interface.md  03-data-types.md  05-examples.md
knowledge/: REDDIT_WORKFLOW_GUIDE.md
knowledge/custom-node-dev/: 01-getting-started.md  04-advanced-features.md
knowledge/zapier-n8n-make-knowledge/: comfyui-workflow-automation-guide.md  make-architecture-analysis.md  n8n-architecture-analysis.md  research-sources.md  zapier-architecture-analysis.md
memories/: reddit-video-context.md
src/claude_code_comfyui_nodes/: __init__.py  claude_code_arguments.py  claude_code_context.py  claude_code_execute.py  claude_code_mcp.py  claude_code_memory.py  claude_code_reader.py  claude_code_tools.py  claude_reddit_scraper.py  nodes.py
tests/: __init__.py  test_claude_code_comfyui_nodes.py
